# Cuik

./: CMakeLists.txt
c11threads/: CMakeLists.txt
common/: CMakeLists.txt
forth/: CMakeLists.txt
libCuik/: CMakeLists.txt
libCuik/meta/: hexembed.c  lexgen.c
main/: CMakeLists.txt
tb/: CMakeLists.txt  Config.cmake.in
